Fix border-radius on small screens

--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -62,6 +62,7 @@ input[type="text"] {
 .base-form__input {
     padding: .5rem 1rem;
     font-size: $body-font-size;
+    border-radius: 0;
     transition: padding .2s;
 
     &[type="text"] {
